# GitAddonsManager

./: .gitignore  .gitlab-ci.yml  AddonUpdateButton.qml  AddonsPanel.qml  CI.mk  CMakeLists.txt  ColorPicker.qml  GitAddonsManager.pro  LogWindow.qml  MaterialSettings.qml  Options.qml  README.md  StyleSettingsBase.qml  Tray.qml  UniversalSettings.qml  Update.qml  addon.cpp  addon.h  control.cpp  control.h  install-qt.qs  io.gitlab.woblight.GitAddonsManager.metainfo.xml  io.gitlab.woblight.GitAddonsManager.yaml  main.cpp  main.qml  qml.qrc  singleapplication.h  utils.h
.github/workflows/: release.yml
enc_temp_folder/42d12715044dd66218831a8ae40d5c7/: release.yml
enc_temp_folder/5ff6254bcbd1b89a203971a6b14971c0/: release.yml
enc_temp_folder/7c482c60c881a4c411652a88a66db3c8/: release.yml
enc_temp_folder/aa034e330fb667c8dcec6e41c880dd/: main.qml
icons/breeze/: index.theme
